# spark-query-analyzer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  spark-query-analyzer-review.md  spark-query-analyzer-roadmap.md
.github/workflows/: ci.yml  lint.yml
notebooks/: QueryPerformanceAnalyzer.ipynb  QueryPerformanceAnalyzer.py  add_monitor_cells.py  update_notebook.py
scripts/: build_single_file.py
spark_query_analyzer/: __init__.py  analyzer.py  aqe_checker.py  cluster_advisor.py  cost_estimator.py  cross_query_optimiser.py  delta_analyser.py  display_utils.py  history_tracker.py  magic.py  narrative_explainer.py  performance_monitor.py  post_execution_analyser.py  python_scanner.py  report_exporter.py  stats_checker.py  streaming_analyser.py  system_info.py
tests/: conftest.py  test_antipattern.py  test_bottleneck_detector.py
tests/fixtures/: dbr13_explain_broadcast_join.txt
